--- a/Application/FireNote/Modules/Auth/Registration/RegistrationViewController.storyboard
+++ b/Application/FireNote/Modules/Auth/Registration/RegistrationViewController.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="e32-Rp-rsG">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="e32-Rp-rsG">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -24,21 +24,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="Bdi-KV-rFF">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            </imageView>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eAp-tx-ZGY" customClass="TPKeyboardAvoidingScrollView">
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ySo-cl-gUv" userLabel="Content View">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="818"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Registration" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fza-56-NRs">
-                                                <rect key="frame" x="20" y="50" width="374" height="56"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="56" id="sdS-UB-9fD"/>
-                                                </constraints>
-                                                <fontDescription key="fontDescription" name="Baloo2-Medium" family="Baloo 2" pointSize="35"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2nt-t4-AmP" userLabel="Fields View">
                                                 <rect key="frame" x="20" y="269.5" width="374" height="279"/>
                                                 <subviews>
@@ -176,11 +170,28 @@
                                                     <constraint firstItem="44w-kG-wUP" firstAttribute="centerY" secondItem="xQR-gg-Lle" secondAttribute="centerY" id="ymD-Ph-QsE"/>
                                                 </constraints>
                                             </view>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="0Co-uV-QT9">
+                                                <rect key="frame" x="142" y="20" width="130" height="130"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="130" id="8Nm-4k-abA"/>
+                                                    <constraint firstAttribute="width" constant="130" id="pAD-lf-Vcy"/>
+                                                </constraints>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Registration" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fza-56-NRs">
+                                                <rect key="frame" x="20" y="188.5" width="374" height="56"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="56" id="sdS-UB-9fD"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" name="Baloo2-Medium" family="Baloo 2" pointSize="35"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
                                         </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="trailing" secondItem="Fza-56-NRs" secondAttribute="trailing" constant="20" id="539-XH-Bfm"/>
-                                            <constraint firstItem="2nt-t4-AmP" firstAttribute="top" relation="greaterThanOrEqual" secondItem="Fza-56-NRs" secondAttribute="bottom" constant="25" id="B9r-vb-tl2"/>
+                                            <constraint firstItem="0Co-uV-QT9" firstAttribute="centerX" secondItem="ySo-cl-gUv" secondAttribute="centerX" id="6Lh-LS-ygB"/>
+                                            <constraint firstItem="2nt-t4-AmP" firstAttribute="top" secondItem="Fza-56-NRs" secondAttribute="bottom" constant="25" id="B9r-vb-tl2"/>
                                             <constraint firstItem="qeq-G1-Ax2" firstAttribute="trailing" secondItem="2nt-t4-AmP" secondAttribute="trailing" id="BYt-xR-0JU"/>
                                             <constraint firstItem="qeq-G1-Ax2" firstAttribute="top" secondItem="2nt-t4-AmP" secondAttribute="bottom" constant="20" id="BjZ-Iy-anv"/>
                                             <constraint firstAttribute="trailing" secondItem="2nt-t4-AmP" secondAttribute="trailing" constant="20" id="ELF-8n-7Y6"/>
@@ -189,11 +200,12 @@
                                             <constraint firstItem="2nt-t4-AmP" firstAttribute="leading" secondItem="ySo-cl-gUv" secondAttribute="leading" constant="20" id="Ntu-ys-F59"/>
                                             <constraint firstItem="dO8-rJ-E3a" firstAttribute="centerX" secondItem="ySo-cl-gUv" secondAttribute="centerX" id="Q7r-gs-fVa"/>
                                             <constraint firstItem="dO8-rJ-E3a" firstAttribute="top" relation="greaterThanOrEqual" secondItem="qeq-G1-Ax2" secondAttribute="bottom" constant="20" id="Qbt-ft-DmR"/>
+                                            <constraint firstItem="0Co-uV-QT9" firstAttribute="top" secondItem="ySo-cl-gUv" secondAttribute="top" constant="20" id="Wno-Sy-Xjf"/>
                                             <constraint firstItem="2nt-t4-AmP" firstAttribute="centerY" secondItem="ySo-cl-gUv" secondAttribute="centerY" id="XAW-Zf-WCa"/>
                                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="dO8-rJ-E3a" secondAttribute="trailing" constant="10" id="Xym-6f-lCO"/>
                                             <constraint firstItem="qeq-G1-Ax2" firstAttribute="leading" secondItem="2nt-t4-AmP" secondAttribute="leading" id="c6U-m9-uGl"/>
                                             <constraint firstItem="dO8-rJ-E3a" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="ySo-cl-gUv" secondAttribute="leading" constant="10" id="jAA-Dd-h9n"/>
-                                            <constraint firstItem="Fza-56-NRs" firstAttribute="top" secondItem="ySo-cl-gUv" secondAttribute="top" constant="50" id="jJq-n2-weN"/>
+                                            <constraint firstItem="Fza-56-NRs" firstAttribute="top" relation="greaterThanOrEqual" secondItem="0Co-uV-QT9" secondAttribute="bottom" constant="20" id="riq-Ig-Eol"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -215,6 +227,10 @@
                             <constraint firstItem="o1Z-5O-y3c" firstAttribute="bottom" secondItem="eAp-tx-ZGY" secondAttribute="bottom" id="Pjb-SO-dtB"/>
                             <constraint firstItem="eAp-tx-ZGY" firstAttribute="top" secondItem="o1Z-5O-y3c" secondAttribute="top" id="SUw-N4-KA7"/>
                             <constraint firstItem="eAp-tx-ZGY" firstAttribute="leading" secondItem="o1Z-5O-y3c" secondAttribute="leading" id="UFS-dB-ZDm"/>
+                            <constraint firstItem="Bdi-KV-rFF" firstAttribute="width" secondItem="JaS-Az-wrs" secondAttribute="width" id="Y40-fQ-yXj"/>
+                            <constraint firstItem="Bdi-KV-rFF" firstAttribute="leading" secondItem="o1Z-5O-y3c" secondAttribute="leading" id="aaM-dA-lLY"/>
+                            <constraint firstItem="Bdi-KV-rFF" firstAttribute="height" secondItem="JaS-Az-wrs" secondAttribute="height" id="dV0-cs-xcT"/>
+                            <constraint firstItem="Bdi-KV-rFF" firstAttribute="top" secondItem="JaS-Az-wrs" secondAttribute="top" id="wcB-Su-Aik"/>
                             <constraint firstItem="o1Z-5O-y3c" firstAttribute="trailing" secondItem="eAp-tx-ZGY" secondAttribute="trailing" id="yPl-ac-4wR"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="o1Z-5O-y3c"/>
@@ -232,8 +248,10 @@
         </scene>
     </scenes>
     <resources>
+        <image name="background" width="794" height="1123"/>
+        <image name="logo" width="346" height="346"/>
         <namedColor name="background_main">
-            <color red="0.99278582334931287" green="0.94720426659672052" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.99215686274509807" green="0.94509803921568625" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
